force-app/main/default/objects/SBQQ__ErrorCondition__c/fields/SBQQ__Index__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Index__c</fullName>
        <description>Assign an unique number to this Condition to reference it in the Product Rule&#39;s Advanced Condition.</description>
        <inlineHelpText>Assign an unique number to this Condition to reference it in the Product Rule&#39;s Advanced Condition.</inlineHelpText>
        <label>Index</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>