force-app/main/default/objects/SBQQ__ErrorCondition__c/fields/SBQQ__TestedField__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__TestedField__c</fullName>
        <description>Field on the Quote object that should be used in testing this condition.</description>
        <inlineHelpText>Field on the Quote object that should be used in testing this condition.</inlineHelpText>
        <label>Tested Field</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBQQ__TestedObject__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Group Line Items</fullName>
                </value>
                <value>
                    <fullName>Unit Price</fullName>
                </value>
                <value>
                    <fullName>Deal_Type__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__ProductName__c</fullName>
                </value>
                <value>
                    <fullName>Eligible_for_Premium_Care__c</fullName>
                </value>
                <value>
                    <fullName>Product_Version__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__ProductFamily__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__StartDate__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__EndDate__c</fullName>
                </value>
                <value>
                    <fullName>Configuration_Type__c</fullName>
                </value>
                <value>
                    <fullName>Current_User_Profile__c</fullName>
                </value>
                <value>
                    <fullName>Select_Orchestrator__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>